--- a/src/main/webapp/cadastro.html
+++ b/src/main/webapp/cadastro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Cadastro</title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
