Pequenas atualizações no css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+<title>Página home - Locadora</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<h1>Locadora de veiculos</h1>
