Adicionado a consulta de locação

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,12 @@
 			<a href="cadastro-veiculo.html">Cadastro de veículos</a> <a
 				href="consulta-veiculo.jsp">Consulta de veículos</a>
 		</div>
+		
+		<div>
+			<h3>Locações</h3>
+			<a href="cadastro-locacao.html">Cadastro de locações</a>
+			<a href="consulta-locacao.jsp">Consulta de locações</a>
+		</div>
 	</div>
 </body>
 </html>
