Edição de locações parcialmente feita

--- a/src/main/webapp/cadastro-locacao.html
+++ b/src/main/webapp/cadastro-locacao.html
@@ -16,7 +16,7 @@
     </div>
     <form id="fcad" action="cadastro-locacao.jsp" method="POST">
         <label for="placa">Placa do veículo</label>
-        <input type="text" id="placa" name="placa" placeholder="EX: ABC-1234" onblur="verificarNome()" />
+        <input type="text" id="placa" name="placa" placeholder="EX: ABC-1234" onblur="verificarPlaca()" /> // FALTA IMPLEMENTAR A FUNÇÃO verificarPlaca()
 
         <label for="nomeCliente">Nome do cliente</label>
         <input type="text" id="nomeCliente" name="nomeCliente" placeholder="EX: João da Silva" />
